updates to spssLoader

--- a/src/Untitled-v1.ipynb
+++ b/src/Untitled-v1.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# !python /home/jovyan/work/src/set_import_paths.py\n",
     "import pandas as pd\n",
-    "# from savReaderWriter import SavReader"
+    "from savReaderWriter import SavReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,24 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'google.cloud'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-3c273a9521e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatabase_connection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatabaseConnection\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcloud\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbigquery\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'google.cloud'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from database_connection import databaseConnection\n",
-    "from google.cloud import bigquery\n"
+    "\n"
    ]
   },
   {
@@ -60,13 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "from datetime import datetime as dt\n",
     "from savReaderWriter import SavReader\n",
+    "from database_connection import databaseConnection\n",
+    "from google.cloud import bigquery\n",
+    "\n",
+    "\n",
     "\n",
     "def _get_chunck_cutoffs(file_length):\n",
     "    interval=10_000\n",
@@ -89,44 +80,20 @@
     "        lines = []\n",
     "        df = pd.DataFrame(columns=header)\n",
     "        chunck_cutoffs = _get_chunck_cutoffs(file_length)\n",
+    "        file_list = []\n",
     "        for i, chunk in enumerate(chunck_cutoffs):\n",
     "            for line in reader[chunk[0] : chunk[1]]:\n",
     "                lines += [line]\n",
     "            df_tmp = pd.DataFrame(lines, columns=header)\n",
     "            filename_out = re.sub(\"\\.sav\", \"_{}.csv\".format(i), filename)\n",
+    "            file_list += filename_out\n",
     "            print(\"LOADING {} of {}: {}\".format(\n",
     "                chunk[1], file_length, filename_out))\n",
     "            df_tmp.to_csv(filename_out)\n",
+    "            return file_list\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df = spss_to_csv(sav_file)\n",
-    "# df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
     "def csv_to_db(source_file, full_table_id):\n",
-    "    \n",
     "    db = databaseConnection()\n",
     "    project_id = full_table_id.split('.')[0]\n",
     "    dataset_id = full_table_id.split('.')[1]\n",
@@ -148,7 +115,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = spss_to_csv(sav_file)\n",
+    "# df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def spss_to_csv(filename, full_table_id):\n",
+    "    file_list = spss_to_csv(filename)\n",
+    "    for file in file_list:\n",
+    "        csv_to_db(source_file, full_table_id)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -168,34 +179,20 @@
       "Enter the file path and name for GCP's Service Account credentials file. See for more details:\n",
       "https://console.cloud.google.com/iam-admin/serviceaccounts?project=<projectId>\n",
       "The current directory is: /home/jovyan/project-implicit/src.\n",
-      " /home/jovyan/project-implicit/src/project-implicit.json\n"
+      " /home/jovyan/project-implicit/src/algomosaic-nyc-5e8f766c6725.json\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 10000 rows into project_implicit:test_table.\n"
+      "Loaded 10000 rows into algomosaic-nyc:project_implicit.test_table.\n"
      ]
     }
    ],
    "source": [
     "csv_to_db(source_file=filename, full_table_id=full_table_id)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
