more updates to spss_loader

--- a/src/spss_loader.ipynb
+++ b/src/spss_loader.ipynb
@@ -308,7 +308,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from google.cloud import bigquery\n",
+    "\n",
+    "# Construct a BigQuery client object.\n",
+    "client = bigquery.Client()\n",
+    "\n",
+    "# TODO(developer): Set table_id to the ID of the table\n",
+    "#                  to add an empty column.\n",
+    "full_table_id = \"your-project.your_dataset.your_table_name\"\n",
+    "\n",
+    "table = client.get_table(full_table_id)  # Make an API request.\n",
+    "\n",
+    "original_schema = table.schema\n",
+    "new_schema = original_schema[:]  # Creates a copy of the schema.\n",
+    "new_schema.append(bigquery.SchemaField(\"phone\", \"STRING\"))\n",
+    "\n",
+    "table.schema = new_schema\n",
+    "table = client.update_table(table, [\"schema\"])  # Make an API request.\n",
+    "\n",
+    "if len(table.schema) == len(original_schema) + 1 == len(new_schema):\n",
+    "    print(\"A new column has been added.\")\n",
+    "else:\n",
+    "    print(\"The column has not been added.\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
